--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     margin-bottom: 33px;
 }
 
+.next-round:hover {
+    background-color: rgb(255, 178, 36);
+}
+
 .battle-container {
     display: flex;
     justify-content: center;
@@ -86,6 +90,10 @@
     justify-content: center;
 }
 
+.player-score,.opponent-score {
+    margin-left: 5px;
+}
+
 .weapon-header {
     display: flex;
     justify-content: center;
@@ -104,6 +112,8 @@
     display: flex;
     justify-content: space-around;
     width: 1050px;
+    align-items: center;
+    height: 100px;
 }
 
 .selection img {
@@ -112,14 +122,18 @@
 }
 
 .rock-button {
-    border: 2px solid #f6644d;
+    outline: 2px solid #f6644d;
 }
 
 .paper-button {
-    border: 2px solid #60bcb9;
+    outline: 2px solid #60bcb9;
 }
 
 .scissor-button {
-    border: 2px solid #f6b818;
+    outline: 2px solid #f6b818;
+}
+
+.rock-button:hover,.paper-button:hover,.scissor-button:hover {
+    outline: 3px solid black;
 }
 
